[gd_scene load_steps=2 format=3 uid="uid://bh78lxkbhpwjc"]

[ext_resource type="Script" path="res://UI/Testing/DebugSliders/debug_sliders.gd" id="1_jvuc6"]

[node name="DebugSliders" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_jvuc6")

[node name="FullContentsContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_top = -31
theme_override_constants/margin_bottom = 0

[node name="SeparatorContainer" type="VBoxContainer" parent="FullContentsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="TopExpandButton" type="Button" parent="FullContentsContainer/SeparatorContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "v"

[node name="ContentsContainer" type="HBoxContainer" parent="FullContentsContainer/SeparatorContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="LeftPageContainer" type="MarginContainer" parent="FullContentsContainer/SeparatorContainer/ContentsContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_constants/margin_left = 0

[node name="LeftPage" type="Button" parent="FullContentsContainer/SeparatorContainer/ContentsContainer/LeftPageContainer"]
layout_mode = 2
text = "<"

[node name="CenteredContainer" type="MarginContainer" parent="FullContentsContainer/SeparatorContainer/ContentsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SliderContainer" type="HBoxContainer" parent="FullContentsContainer/SeparatorContainer/ContentsContainer/CenteredContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="RightPageContainer" type="MarginContainer" parent="FullContentsContainer/SeparatorContainer/ContentsContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2

[node name="RightPage" type="Button" parent="FullContentsContainer/SeparatorContainer/ContentsContainer/RightPageContainer"]
layout_mode = 2
text = ">"

[node name="BottomExpandButton" type="Button" parent="FullContentsContainer/SeparatorContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "^"

[connection signal="button_down" from="FullContentsContainer/SeparatorContainer/TopExpandButton" to="." method="_on_expand_toggle_button_button_down"]
[connection signal="button_down" from="FullContentsContainer/SeparatorContainer/ContentsContainer/LeftPageContainer/LeftPage" to="." method="_on_left_page_button_down"]
[connection signal="button_down" from="FullContentsContainer/SeparatorContainer/ContentsContainer/RightPageContainer/RightPage" to="." method="_on_right_page_button_down"]
[connection signal="button_down" from="FullContentsContainer/SeparatorContainer/BottomExpandButton" to="." method="_on_expand_toggle_button_button_down"]
